--- a/department-Service.properties
+++ b/department-Service.properties
@@ -6,5 +6,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.boot.message=Hello working on somethin
+spring.boot.message=Hello working on something useful
 eureka.instance.client.server-url.defaultZone=http://localhost:8761/eureka/
