--- a/employee-service.properties
+++ b/employee-service.properties
@@ -7,5 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8081
-
+logging.level.org.springframework.cloud.openfeign=DEBUG
+logging.level.feign=DEBUG
+logging.level.com.example.Employee_Service.empService=DEBUG
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
