--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -7,4 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.boot.message=Hello working on something useful
-eureka.instance.client.server-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.client.server-url.defaultZone=https://3lp5bx0s-8761.inc1.devtunnels.ms/eureka
+eureka.instance.hostname=3lp5bx0s-8080.inc1.devtunnels.ms
+eureka.instance.non-secure-port=8080
+eureka.instance.prefer-ip-address=false
